fix: hiding/showing the scrollbar shifts page layout

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -10,6 +10,8 @@ $error-color: #cf2f2f;
 
 $container: 800px;
 
+$mobile-size: 512px;
+
 @import './resume';
 
 :root {
@@ -31,12 +33,23 @@ $container: 800px;
 //   }
 // }
 
-html,
-body {
+html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
     Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-  margin: 0;
-  padding: 0;
+  font-size: 16px;
+  text-rendering: optimizeLegibility;
+  overflow-x: hidden;
+  min-width: 250px;
+}
+
+// fix: hiding/showing the scrollbar shifts page layout
+@media screen and (min-width: $mobile-size) {
+  html {
+    margin-right: calc(100% - 100vw);
+  }
+  body {
+    margin-right: calc(100vw - 100%);
+  }
 }
 
 * {
@@ -459,7 +472,7 @@ dl.expertise-table {
   }
 }
 
-@media (max-width: 512px) {
+@media (max-width: $mobile-size) {
   .box-link {
     flex-basis: 100%;
     height: 150px;
